Add Dockerfile, Supabase storage, rate limiting, Telegram UI